--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: #959480;
+  width: 100%;
+  height: 100vh;
 }
 
 .App-logo {
@@ -10,6 +13,7 @@
 .App-header {
   background-color: #222;
   height: 150px;
+  margin: 0;
   padding: 20px;
   color: white;
 }
