--- a/back/express/views/profile.ejs
+++ b/back/express/views/profile.ejs
@@ -28,6 +28,7 @@
 						<strong>id</strong>: <%= user.id %><br>
 						<strong>username</strong>: <%= user.username %><br>
 						<strong>password</strong>: <%= user.password %>
+						<strong>userlevel</strong>: <%= user.userlvl %>
 					</p>
 
 			</div>
