--- a/back/express/views/index.ejs
+++ b/back/express/views/index.ejs
@@ -18,7 +18,8 @@
 
             <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
             <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
-        </div>
+<div>user: <%= user.username %></div>
+				</div>
     </div>
 </body>
 </html>
