--- a/back/express/views/index.ejs
+++ b/back/express/views/index.ejs
@@ -18,7 +18,7 @@
 
             <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
             <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
-<div>user: <%= user.username %></div>
+<div>user: </div>
 				</div>
     </div>
 </body>
