--- a/back/express/views/login.ejs
+++ b/back/express/views/login.ejs
@@ -18,6 +18,7 @@
             <% if (message.length > 0) { %>
                 <div class="alert alert-danger"><%= message %></div>
             <% } %>
+						<%= user %>
 
             <!-- LOGIN FORM -->
             <form action="/login" method="post">
