--- a/front/src/index.css
+++ b/front/src/index.css
@@ -71,29 +71,28 @@ body {
 }
 
 .loginWrapper {
-  background-position: center;
   width: 100%;
   height: 100%; 
   align-content: center;
+  background: transparent;
 }
 
 .loginContent {
-  background: url("components/ui/EndUser/Materials/käsitausta.png") no-repeat center center fixed;
-  color: #004225;
+  background: url("components/ui/EndUser/Materials/käsitausta.png") no-repeat fixed;
+  background-position: top 100px center;
   background-size: contain;
-  /*-webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;*/
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
   color: #004225;
   font-size: 16px;
   padding: 10% 10% 10% 10%;
- width: 50%;
+  width: 50%;
   height:100%;
   max-width: 900px;   
   min-height:700px;  
   align-content: center;
-  position: relative;
+  position: fixed;
   /*padding: 30% 10% 10% 40%;
   background: transparent; */      
   }  
@@ -116,9 +115,9 @@ body {
 
   .loginGroup {
     line-height: 1.5;
-    margin: 5% 5% 5% 5%;
-    align-content: center;
-    padding-left: 50%;
+    align-content: left;
+    padding-left: 55%;
+    padding-bottom: 2%;
   }
   
 .login-group button{
@@ -134,7 +133,7 @@ body {
   font-size: 16px;
   text-align: left;
   padding-left: 60%;
-  padding-top: 10%;
+  padding-top: 5%;
 }
 
 a:link {
@@ -167,10 +166,6 @@ button.menu {
 .map {
   font-family: 'Kanit';
   color: red;
-  fontSize: 48px;
-  paddingTop: 16px;
-  marginBottom: 12px;
-  fontWeight: 400;
 }
 
 .left {
@@ -323,7 +318,7 @@ h1.historytitle {
 
 .frontpake {
   position: relative;
-  color: #004225;
+  color: #FFFFFF;
   font-weight: bold;
   font-family: kanit;
   margin: auto;
@@ -340,7 +335,7 @@ h1.historytitle {
 
 h1 {
   text-align: center;
-  color: #004225;
+  color: #e71d2e;
   font-family: kanit;
 }
 
