--- a/front/src/index.css
+++ b/front/src/index.css
@@ -72,47 +72,47 @@ body {
 
 .loginWrapper {
   width: 100%;
-  height: 100%; 
-  align-content: center;
+  height: 100%;
   position: fixed;
   background: transparent;
 }
 
+
 .loginContent {
   background: url("components/ui/EndUser/Materials/käsitausta.png") no-repeat fixed;
-  background-position: top 102px center;
+  background-position: top 102px left;
   background-size: contain;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
+  position: absolute;
+  padding-top: 150px;
   color: #004225;
-  font-size: 16px;
-  padding: 10% 10% 10% 10%;
-  width: 50%;
-  height:100%;
-  max-width: 900px;   
-  min-height:700px;  
-  align-content: center;
-  position: fixed;
-  /*padding: 30% 10% 10% 40%;
-  background: transparent; */      
+  font-size: 200px;
+  max-width: 949px;   
+  max-height: 100%;
+  min-width: 100%;
+  min-height: 100%; 
+  border: 0;
   }  
 
   p.loginlabel {
-    position: fixed;
     font-family: kanit;
-    text-align: center;
+    text-align: left;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
     width: 100%;
-    padding-left: 5%;
   }
 
-  .loginGroup {
+ .loginGroup {
     line-height: 1.5;
-    align-content: left;
-    padding-left: 55%;
-    padding-top: 5%;
+    align-content: center;
+    font-family: kanit;
+  font-size: 16px;
+  text-align: left;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 1%;
   }
   
 .login-group button{
@@ -127,7 +127,6 @@ body {
   font-family: kanit;
   font-size: 16px;
   text-align: left;
-  padding-left: 60%;
   padding-top: 5%;
 }
 
@@ -330,7 +329,8 @@ h1.historytitle {
 }
 
 h1 {
-  text-align: center;
+  text-align: ce
+  nter;
   color: #FFFFFF;
   font-family: kanit;
 }
