CSS registeriin ja vähän frontpageen, Loginista raisedbutton flatiks

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -7,6 +7,16 @@ body {
   font-family: sans-serif;
 }
 
+a:visited
+{
+color: #004225;
+}
+
+a:hover
+{
+color: #808080;
+}
+
 /* APP.css */
 /* Arttu has joined the party*/
 
@@ -44,6 +54,39 @@ body {
   to { transform: rotate(360deg); }
 }
 
+/* REGISTER.css */
+
+
+.registerWrapper
+{
+  width: 100%;
+  height: 100vh;
+  background: url("components/ui/EndUser/Materials/tausta2.png") no-repeat fixed;
+  background-position: bottom -80px left;
+  background-size: contain;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+}
+
+.registerStructure
+{ 
+  padding: 10px;
+  border-spacing: 3px;
+}
+
+.leftRegisterLabel
+{
+  font-family: kanit;
+  text-align: left;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.rightRegisterField
+{
+ margin-left: 5px;
+}
 
 /* LOGIN.css */
 
@@ -55,9 +98,6 @@ body {
     display: inline-block;
 }
 
-.loginpage {
-  height: 85vh;
-}
 
 .loginInputField
 {
@@ -72,7 +112,7 @@ body {
 
 .loginWrapper {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   background: transparent;
 }
@@ -90,23 +130,25 @@ body {
   color: #004225;
   font-size: 200px;
   max-width: 949px;   
-  max-height: 100%;
+  max-height: 100vh;
   min-width: 100%;
-  min-height: 100%; 
+  min-height: 100vh; 
   border: 0;
   }  
 
-  p.loginlabel {
+  .loginLabel {
     font-family: kanit;
     text-align: left;
     font-weight: bold;
     font-size: 18px;
     width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
  .loginGroup {
     line-height: 1.5;
-    align-content: center;
+    align-content: left;
     font-family: kanit;
   font-size: 16px;
   text-align: left;
@@ -127,7 +169,7 @@ body {
   font-family: kanit;
   font-size: 16px;
   text-align: left;
-  padding-top: 5%;
+  padding-top: 7%;
 }
 
 a:link {
@@ -271,7 +313,7 @@ body {
 
 p {
   text-align: left;
-  padding-left: 7%;
+  padding-left: 1%;
 }
 
 table {
@@ -310,6 +352,17 @@ h1.historytitle {
 }
 
 /* FRONTPAGE.css */
+
+.frontpageWrapper{
+  width: 100%;
+  height: 100vh;
+  background: url("components/ui/EndUser/Materials/tausta2.png") no-repeat fixed;
+  background-position: bottom -80px left;
+  background-size: contain;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+}
 
 .frontpake {
   position: relative;
