--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,4 +1,4 @@
-/* INDEX.css */
+/* GENERAL */
 
 body {
   margin: auto; 
@@ -7,6 +7,16 @@ body {
   font-weight: bold;
   font-family: kanit;
   margin: auto;
+}
+
+h1 {
+  text-align: center;
+  font-family: kanit;
+}
+
+a:link {
+  color:#004225;
+  text-decoration: none;
 }
 
 a:visited
@@ -19,7 +29,36 @@ a:hover
 color: #808080;
 }
 
-/* APP.css */
+p {
+  text-align: left;
+  padding-left: 1%;
+}
+
+table {
+  font-size: 115%;
+  text-align: left;
+}
+
+.wrapper{
+  width: 100%;
+  height: 100vh;
+  background: url("components/ui/EndUser/Materials/tausta2.png") no-repeat fixed;
+  background-position: bottom -80px left;
+  background-size: contain;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+}
+
+.Container {
+  font-weight: bold;
+  font-family: kanit;
+  margin: auto;
+  width: 50%;
+  max-width: 800px;
+}
+
+/* APP */
 /* Arttu has joined the party*/
 
 .App {
@@ -51,12 +90,21 @@ color: #808080;
   font-size: large;
 }
 
+
+.app-bar-title {
+  color: #004225;
+  font-family: kanit;
+  font-weight: bold;
+  margin: 0 5vh 0 0;
+  display: inline-block;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
 
-/* REGISTER.css */
+/* REGISTER */
 
 
 .registerWrapper
@@ -90,16 +138,8 @@ color: #808080;
  margin-left: 5px;
 }
 
-/* LOGIN.css */
 
-.app-bar-title {
-    color: #004225;
-    font-family: kanit;
-    font-weight: bold;
-    margin: 0 5vh 0 0;
-    display: inline-block;
-}
-
+/* LOGIN */
 
 .loginInputField
 {
@@ -172,10 +212,6 @@ color: #808080;
   padding-top: 7%;
 }
 
-a:link {
-  color:#004225;
-  text-decoration: none;
-}
 
 /* WASTEPROCESSOR.css */
 
@@ -257,11 +293,6 @@ button.menu {
   font-family: kanit;
 }
 
-h1 {
-  text-align: center;
-  color: white;
-  font-family: kanit;
-}
 
 .newsbox {
   margin: auto;
@@ -274,21 +305,6 @@ h1 {
   border: 1px solid white;
 }
 
-.footter {
-background-image: url("components/ui/EndUser/Materials//hirvikarhu.png"),
-                    url("components/ui/EndUser/Materials/Kunpitää.png"),
-                    url("components/ui/EndUser/Materials/tausta2.png");
-  background-position: left 10px bottom, top 20px right 60px ,top 10px right;
-  background-size: 100px, 150px, auto;
-  background-repeat: no-repeat, no-repeat;
-  height: 100px;
-  right: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #004225;
-  margin-bottom: 1vh;
-}
-
 
 /* PROFILE.css */
 
@@ -298,25 +314,6 @@ background-image: url("components/ui/EndUser/Materials//hirvikarhu.png"),
 }
 
 /* ORDER.css */
-
-.Container {
-  font-weight: bold;
-  font-family: kanit;
-  margin: auto;
-  width: 50%;
-  max-width: 800px;
-}
-
-p {
-  text-align: left;
-  padding-left: 1%;
-}
-
-table {
-  font-size: 115%;
-  padding-left: 5%;
-  text-align: left;
-}
 
 #buttons {
   width:100%;
@@ -336,16 +333,6 @@ text-align: right;
   padding: 1rem;
   text-align: center;
   margin: auto;
-}
-
-/* HISTORY.css */
-
-p.history {
-color: white;
-}
-
-h1.historytitle {
-  color: white;
 }
 
 /* FRONTPAGE.css */
@@ -378,13 +365,6 @@ h1.historytitle {
   font-family: kanit;
 }
 
-h1 {
-  text-align: ce
-  nter;
-  color: #FFFFFF;
-  font-family: kanit;
-}
-
 .newsbox {
   margin: auto;
   position: relative;
@@ -396,13 +376,4 @@ h1 {
   border: 1px solid #004225;
 }
 
-.footter {
-  position: relative;
-  height: 10px;
-  right: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #004225;
-  margin-bottom: 2vh;
-}
 
