--- a/front/src/ArtunCSSsaadot.css
+++ b/front/src/ArtunCSSsaadot.css
@@ -1,7 +1,60 @@
 /*RESERVATION LIST OPTIONS*/
 
+#alakatit td.type{
+    width: auto;
+    padding-left: 20px;
+}
+
+#alakatit {
+    padding-left: 220px;
+    width: 100%;   
+    right: 10%;
+}
+
+#alakatetext{
+    text-align: left;
+    margin:0;
+}
+
+#alakattibody{
+    display: block;
+    max-height: 200px;
+    width: 250px;
+    overflow:auto; 
+    overflow-y:scroll;
+}
+
+#katit{
+    position: absolute;
+}
+
+#katit td.type{
+    width: 150px;
+}
+
+#kattibody{
+    display: block;
+    max-height: 200px;
+    width:200px;
+    overflow:auto; 
+    overflow-y:scroll;
+}
+
+#katetext{
+    text-align: left;
+    margin:0;
+}
+
+#varatut{
+    position: absolute;
+    margin: 70px 0 0 0;
+    padding: 0;
+    right: 25px;
+}
+
 #ResListOptionsPohjadiv{
     background-color: white;
+    border-radius: 10px;
     padding: 1px 0 1px 0;
     height: auto;
 }
@@ -9,16 +62,26 @@
 #ResListOptionsColorDiv{
     background-color: #004225;
     border-radius: 5px;
-    padding: 10px;
+    padding: 10px 10px 10px 20px;
     margin: 5px;
     height: 92%;
-    /*background-image: url("temp.jpg");
-    background-size: 100% 100%;*/
 }
 
 #submitButt{
-    border-radius: 4px;
-    margin-left: 5%;
+    border-radius: 10px;
+    right: 30px;
+    margin-top:10px;
+    position: absolute;
+    height: 40px;
+    width: 130px;
+    font-size: 25px;
+    border-color: white;
+    background-color: #004225;
+    color: white;
+}
+
+#submitButt:hover{
+    background-color: #007040;
 }
 
 #weightField {
@@ -50,4 +113,25 @@
     top: 1px;
     margin-left: 3px;
     width: 50px;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #004225; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #0b7044; 
+    border-radius: 30px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #007040; 
 }
