--- a/front/src/index.css
+++ b/front/src/index.css
@@ -41,18 +41,7 @@ table {
 
 
 
-.Container {
-  font-weight: bold;
-  font-family: kanit;
-  margin: auto;
-  width: 50%;
-  max-width: 800px;
-  min-height: 100vh;
-  align-content: center;
-}
-
 /* APP */
-/* Arttu has joined the party*/
 
 .App {
   text-align: center;
@@ -97,8 +86,9 @@ table {
   to { transform: rotate(360deg); }
 }
 
-/* REGISTER */
 
+
+/* REGISTER */
 
 .registerWrapper
 {
@@ -119,7 +109,7 @@ table {
   max-width: 90vh;
   min-width: 50vh;
   margin: auto;
-  padding: 5%;
+  padding: 2%;
   margin-top: 15px;
   border-spacing: 3px;
   background-color: #fff;
@@ -146,39 +136,27 @@ table {
 
 /* LOGIN */
 
-.loginInputField
-{
-  width: 20%;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #004225;
-  display: inline-block;
-
-  /*margin-bottom: 10px;*/
-}
 
 .loginWrapper {
   width: 100%;
-  height: 100vh;
-  position: fixed;
-  background: transparent;
 }
 
 
 .loginContent {
+  margin: 0;
   background: url("components/ui/EndUser/Materials/käsitausta.png") no-repeat local;
   background-position: top left;
   background-size: contain;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
-  padding-top: 25vh;
-  color: #004225;
+  padding-top: 30vh;
   font-size: 200px;
   max-width: 940px;   
   min-width: 100%;
   min-height: 100vh; 
   border: 0;
+  color: #004225;
   }  
 
   .loginLabel {
@@ -191,6 +169,17 @@ table {
     margin-bottom: 2px;
   }
 
+  .loginInputField
+{
+  width: 20%;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #004225;
+  display: inline-block;
+
+  /*margin-bottom: 10px;*/
+}
+
  .loginGroup {
   line-height: 1.5;
   align-content: left;
@@ -202,14 +191,6 @@ table {
   padding-top: 1%;
   }
   
-.login-group button{
-  width: 100%;
-    text-align: left;
-    color: #FFF;
-    border: none;
-    background: #004225; 
-}
-
 .login-links {
   font-family: kanit;
   font-size: 16px;
@@ -318,6 +299,7 @@ button.menu {
   color: white;
 }
 
+
 /* ORDER.css */
 
 #buttons {
@@ -342,7 +324,7 @@ text-align: right;
 
 /* FRONTPAGE.css */
 
-.frontpageWrapper{
+.frontPageWrapper{
   width: 100%;
   height: 100vh;
   background: url("components/ui/EndUser/Materials/tausta2.png") no-repeat fixed;
@@ -353,15 +335,32 @@ text-align: right;
   -o-background-size: contain;
 }
 
-.frontpake {
-  position: relative;
-  color: #FFFFFF;
+.FrontPageContainer {
   font-weight: bold;
   font-family: kanit;
   margin: auto;
-  margin-top: 2vh;
-  min-width: 400px;
+  width: 50%;
+  max-width: 800px;
+  min-height: 100vh;
+  align-content: center;
 }
+
+.frontPageBox
+{ 
+  max-width: 90vh;
+  min-width: 50vh;
+  margin: auto;
+  padding: 2%;
+  margin-top: 15px;
+  border-spacing: 1px;
+  background-color: #fff;
+  border-radius: 15px;
+  color: #004225;
+  font-family: kanit;
+  -webkit-transform: rotate(1deg);  /*poista jos et halua rotatea*/ 
+  transform: rotate(1deg); /*poista jos et halua rotatea*/ 
+}
+
 
 .frontDrawer {
   position: relative;
