--- a/front/src/index.css
+++ b/front/src/index.css
@@ -132,6 +132,50 @@ table {
  margin-left: 5px;
 }
 
+/* UPDATE */
+
+.updateWrapper
+{
+  margin: auto;
+  width: 100%;
+  background: url("components/ui/EndUser/Materials/tausta2.png") no-repeat;
+  background-attachment: local;
+  background-position: center bottom;
+  background-size: contain;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  align-content: center;
+}
+
+.updateStructure
+{ 
+  max-width: 90vh;
+  min-width: 50vh;
+  margin: auto;
+  padding: 2%;
+  margin-top: 15px;
+  border-spacing: 3px;
+  background-color: rgb(186, 221, 134);
+  box-shadow: -10px 3px rgb(166, 206, 106);
+  border-radius: 15px;
+}
+
+.leftUpdateLabel
+{
+  font-family: kanit;
+  text-align: left;
+  font-weight: bold;
+  margin-left: 5%;
+  font-size: 18px;
+  color:#004225; 
+}
+
+.rightUpdateField
+{
+ margin-left: 5px;
+}
+
 
 /* LOGIN */
 
