Order sivuu ja visuiluu

--- a/front/src/ArtunCSSsaadot.css
+++ b/front/src/ArtunCSSsaadot.css
@@ -119,9 +119,9 @@
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
     background: #004225; 
-}
+} */
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
