--- a/front/src/index.css
+++ b/front/src/index.css
@@ -9,6 +9,10 @@ body {
   margin: auto;
 }
 
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
 h1 {
   text-align: center;
   font-family: kanit;
@@ -515,9 +519,14 @@ text-align: right;
   font-family: kanit;
   text-align: left;
   font-weight: bold;
-  margin-left: 5%;
+  margin: auto;
+  padding: 0;
   font-size: 18px;
   color:#004225; 
+}
+
+.orderH2 {
+  margin: auto;
 }
 
 .rightOrderField
