--- a/front/src/index.css
+++ b/front/src/index.css
@@ -533,3 +533,15 @@ text-align: right;
 {
  margin-left: 5px;
 }
+
+/* ADMIN */
+
+.addCatLabel {
+  text-align: left;
+  font-family: kanit;
+  font-weight: bold;
+  margin: auto;
+  margin-left: 2%;
+  font-size: 20px;
+  padding: 0;
+}
