Lassin Div valmistui ja on valmis naimisiin

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -546,6 +546,13 @@ text-align: right;
   font-size: larger;
 }
 
+#ImagePreview {
+  float: right;
+  width: 50%;
+  border: 2px solid red;
+  padding: 5px;
+}
+
 /* ADMIN */
 
 .addCatLabel {
