--- a/front/src/index.css
+++ b/front/src/index.css
@@ -563,10 +563,11 @@ text-align: right;
 }
 
 #SummaryImagePreviews{
-  border: 2px solid red;
+  border: 2px solid #004225;
   width: 100px;
-  height: 100px;
+  height: auto;
   margin: 10px 0;
+  padding: 7px 7px 0 7px;
 }
 
 /* ADMIN */
