--- a/front/src/index.css
+++ b/front/src/index.css
@@ -236,6 +236,12 @@ table {
 
 
 /* LOGIN */
+#loginSignin {
+  position: absolute;
+  margin-top: 500px;
+  margin-left: 70px;
+  color: black;
+}
 
 .loginWrapper {
   width: 100%;
@@ -264,7 +270,7 @@ table {
 #bottomColor {
   background-color: white;
   width: 100%;
-  height: 30vh;
+  height: 40vh;
 }
 
 .loginContent {
@@ -272,15 +278,13 @@ table {
   background: url("components/ui/EndUser/Materials/Login-sticker.png"), url("components/ui/EndUser/Materials/käsitausta.png"); 
   background-repeat: no-repeat, no-repeat;
   background-position: 20vh 80vh, top 2vh left;
-  background-size: 100%;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  padding-top: 125%;
+  background-size: contain;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  padding: 0;
   font-size: 200px;
-  max-width: 940px;   
-  min-width: 100%;
-  height: 30vh; 
+  height: 100%; 
   border: 0;
   color: #004225;
   }  
