--- a/front/src/index.css
+++ b/front/src/index.css
@@ -573,12 +573,12 @@ text-align: right;
 #HomeClientHeader {
   text-align: right;
   margin: 0 20px 0 0;
-  font-size: larger;
+  font-size: medium;
 }
 #OrgClientHeader {
   text-align: left;
   margin: 0 0 0 15px;
-  font-size: larger;
+  font-size: medium;
 }
 
 #ImagePreview {
