--- a/front/src/index.css
+++ b/front/src/index.css
@@ -461,7 +461,7 @@ text-align: right;
 
 .frontPageWrapper{
   width: 100%;
-  height: 115vh;
+  height: 100%;
   background: url("components/ui/EndUser/Materials/tausta2.png") no-repeat fixed;
   background-position: bottom left;
   background-size: contain;
@@ -487,6 +487,7 @@ text-align: right;
   margin: auto;
   padding: 2%;
   margin-top: 15px;
+  margin-bottom: 30px;
   border-spacing: 1px;
   background-color: #fff;
   box-shadow: 0px 0px 0px 3px rgb(166, 206, 106);
@@ -524,7 +525,7 @@ text-align: right;
 {
   margin: auto;
   width: 100%;
-  background: url("components/ui/EndUser/Materials/tausta2.png") no-repeat;
+  /*background: url("components/ui/EndUser/Materials/tausta2.png") no-repeat;*/ /*Joku random kuva joka ei ilmeisesti tehny mitää*/
   background-attachment: local;
   background-position: center bottom;
   background-size: contain;
